fix: annotation processor compilation