@@ -185,6 +185,33 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>default-compile</id>
+                        <configuration>
+                            <source>17</source>
+                            <target>17</target>
+                            <compilerArgs>-proc:none</compilerArgs>
+                            <includes>
+                                <include>
+                                    it/pagopa/ecommerce/commons/utils/warmup/annotationprocessor/WarmupAnnotationProcessor.java
+                                </include>
+                            </includes>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>compile-project</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                        <configuration>
+                            <source>17</source>
+                            <target>17</target>
+                            <compilerArgs>--enable-preview</compilerArgs>
+                        </configuration>
+                    </execution>
+                </executions>
                 <configuration>
                     <source>17</source>
                     <target>17</target>
@@ -279,7 +306,8 @@
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <inputSpec>https://api.uat.tokenizer.pdv.pagopa.it/docs/tokenizeruapis/openapi.json</inputSpec>
+                            <inputSpec>https://api.uat.tokenizer.pdv.pagopa.it/docs/tokenizeruapis/openapi.json
+                            </inputSpec>
                             <generatorName>java</generatorName>
                             <library>webclient</library>
                             <generateApiDocumentation>false</generateApiDocumentation>
